--- a/index.html
+++ b/index.html
@@ -735,6 +735,7 @@
         <p>Join thousands of women who've discovered the power of personalized wellness</p>
         <a href="#" class="cta-button">Start Your Journey Free</a>
         <p style="margin-top: 1.5rem; color: #9ca3af; font-size: 0.95rem; font-weight: 500;">Available on iOS • Free to start • No credit card required</p>
+        <p style="margin-top: 0.9rem; color: #9ca3af; font-size: 0.95rem; font-weight: 500;"><a href="/privacypolicy" style="color: #9ca3af; font-size: 0.95rem; font-weight: 500; text-decoration: none;">Privacy Policy</a></p>
     </section>
 
     <script>
