--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Aster - Your Personal Wellness Companion</title>
     <link rel="icon" href="/favicon.ico">
     <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-48x48.png" sizes="48x48">
+    <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="/android-chrome-512x512.png" sizes="512x512">
     <link rel="apple-touch-icon" href="/appletouch.png" sizes="180x180">
+    <link rel="manifest" href="/site.webmanifest">
     <style>
         * {
             margin: 0;
